# CS-Self-Study

./: README.md
ML-AI/Audit/UCLA-CS163-25fa/: README.md
ML-AI/NTU-DL(HUNGYI-LEE)-22sp/: note_DL.md
ML-AI/Stanford-CS336-25sp/: note_336.md
Software-Engineering/UCLA-CS130-25fa/: README.md  note_130.md
Software-Engineering/UCLA-CS130-25fa/prj_130/: CMakeLists.txt  README.MD  my_config  my_config_docker  release_latest.sh
Software-Engineering/UCLA-CS130-25fa/prj_130/docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
Software-Engineering/UCLA-CS130-25fa/prj_130/docs/config/: README.md
Software-Engineering/UCLA-CS130-25fa/prj_130/docs/handlers/analytics-handler/: ANALYTICS_HANDLER.md
Software-Engineering/UCLA-CS130-25fa/prj_130/docs/handlers/crud-handler/: CRUD_HANDLER.md
Software-Engineering/UCLA-CS130-25fa/prj_130/docs/handlers/link-manage-handler/: LINK_MANAGE_HANDLER.md
Software-Engineering/UCLA-CS130-25fa/prj_130/docs/handlers/link-redirect-handler/: REDIRECT_HANDLER.md
Software-Engineering/UCLA-CS130-25fa/prj_130/docs/handlers/sleep-handler/: SLEEP_HANDLER.md
Software-Engineering/UCLA-CS130-25fa/prj_130/file/list/: hello.html
Software-Engineering/UCLA-CS130-25fa/prj_130/frontend/: analytics.html  index.html
Software-Engineering/UCLA-CS130-25fa/prj_130/frontend/css/: style.css
Software-Engineering/UCLA-CS130-25fa/prj_130/frontend/js/: analytics.js  url-manager.js
Software-Engineering/UCLA-CS130-25fa/prj_130/include/: analytics_handler_factory.h  analytics_request_handler.h  base62.h  config_parser.h  crud_handler_factory.h  crud_manager.h  crud_manager_interface.h  crud_request_handler.h  dispatcher.h  echo_handler_factory.h  echo_request_handler.h  handler_registry.h  handler_types.h  health_handler_factory.h  health_request_handler.h  link_manage_handler_factory.h  link_manage_request_handler.h  link_manager.h  link_manager_interface.h  link_manager_provider.h  link_manager_types.h  link_record_serialization.h  link_redirect_handler_factory.h  link_redirect_request_handler.h  logger.h  not_found_handler_factory.h  not_found_request_handler.h  request.h  request_handler.h  request_handler_factory.h  request_parser.h  response.h  response_builder.h  server.h  server_config.h  session.h  sleep_handler_factory.h  sleep_request_handler.h  static_handler_factory.h  static_request_handler.h
Software-Engineering/UCLA-CS130-25fa/prj_130/src/: _main.cc  analytics_handler_factory.cc  analytics_request_handler.cc  config_parser.cc  crud_handler_factory.cc  crud_manager.cc  crud_request_handler.cc  dispatcher.cc  echo_handler_factory.cc  echo_request_handler.cc  handler_registry.cc  handler_types.cc  health_handler_factory.cc  health_request_handler.cc  link_manage_handler_factory.cc  link_manage_request_handler.cc  link_manager.cc  link_manager_provider.cc  link_record_serialization.cc  link_redirect_handler_factory.cc  link_redirect_request_handler.cc  logger.cc  not_found_handler_factory.cc  not_found_request_handler.cc  request.cc  request_parser.cc  response.cc  response_builder.cc  server.cc  server_config.cc  session.cc  sleep_handler_factory.cc  sleep_request_handler.cc  static_handler_factory.cc  static_request_handler.cc
Software-Engineering/UCLA-CS130-25fa/prj_130/tests/: analytics_request_handler_test.cc  crud_handler_factory_test.cc  crud_manager_test.cc  crud_request_handler_test.cc  dispatcher_test.cc  echo_handler_factory_test.cc  echo_request_handler_test.cc  factory_test.cc  handler_registry_test.cc  health_handler_factory_test.cc  health_request_handler_test.cc  link_manage_request_handler_test.cc  link_manager_fake_test.cc  link_manager_fs_test.cc  link_manager_provider_test.cc  link_record_serialization_test.cc  link_redirect_handler_factory_test.cc  link_redirect_request_handler_test.cc  logger_test.cc  not_found_handler_test.cc  request_parser_test.cc  response_builder_test.cc  response_test.cc  server_config_test.cc  server_test.cc  session_test.cc  sleep_handler_factory_test.cc  sleep_request_handler_test.cc  static_handler_factory_test.cc  static_request_handler_test.cc
Software-Engineering/UCLA-CS130-25fa/prj_130/tests/config/: config_parser_test.cc  test_config_1  test_config_2
Software-Engineering/UCLA-CS130-25fa/prj_130/tests/fakes/: link_manager_fake.cc  link_manager_fake.h
Software-Engineering/UCLA-CS130-25fa/prj_130/tests/integration/: README.md  integration_test.py  run_integration_tests.sh  server_fixture.py  test_cases.py  test_helpers.py  test_metadata.py  test_runner.py
Software-Engineering/UCLA-CS130-25fa/prj_130/tests/integration/test_configs/: crud_test_config  default_config  link_test_config  static_config
Software-Engineering/UCLA-CS130-25fa/prj_130/tests/static_test_files/: hello.html
Statistical-Finance/UCLA-StatsC283-25fa/: README.md
Statistical-Finance/UCLA-StatsC283-25fa/lecture_note_283/: lec22.2_48. Binomial option pricing model - Cox, Ross, Rubinstein (1979).doc
